data/derived/sp14/progs/unify/prog3912.ml.out
Characters 13-22:
  let _ = eval (Sine(0));;
               ^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
